# hiit-dna-methylation-analysis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
data/: README.md
docs/api/: reference.md
docs/examples/: quickstart.md
docs/methodology/: batch_correction.md  enrichment_analysis.md  feature_selection.md
examples/: basic_analysis_example.py
hiit_methylation/: __init__.py
hiit_methylation/data/: __init__.py  loaders.py  preprocessing.py
hiit_methylation/models/: __init__.py  base.py  classifiers.py  regressors.py
hiit_methylation/utils/: __init__.py  helpers.py  metrics.py  validation.py
hiit_methylation/visualization/: __init__.py  heatmaps.py  plots.py
models/: README.md
notebooks/: 01_data_acquisition.ipynb  02_preprocessing.ipynb  03_feature_selection.ipynb  04_classification.ipynb  05_enrichment_analysis.ipynb
notebooks/examples/: custom_analysis.ipynb  quick_start.ipynb
results/: README.md
src/data/: loader.py  preprocessing.py  sample_mapping.py
src/enrichment/: __init__.py  analysis.py  databases.py
src/features/: __init__.py  ml_selection.py  selection.py  statistical.py  time_series.py
src/models/: __init__.py  classifiers.py  evaluation.py  multiversion.py
src/visualization/: __init__.py  plots.py  publication.py
tests/: conftest.py  test_basic_functionality.py  test_classifiers.py  test_data_loader.py  test_enrichment.py  test_feature_selection.py  test_preprocessing.py
tests/test_data/: mock_methylation.csv
