[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hiit-methylation"
version = "1.0.0"
description = "DNA methylation-based classification pipeline for HIIT intervention analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "HIIT Methylation Research Team"}
]
keywords = ["methylation", "HIIT", "machine-learning", "bioinformatics", "epigenetics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "statsmodels>=0.13",
    "joblib>=1.0",
]

[project.optional-dependencies]
full = [
    "umap-learn>=0.5",
    "GEOparse>=2.0",
    "rpy2>=3.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/HIIT-Methylation/HIIT-Methylation-Classification"
Documentation = "https://github.com/HIIT-Methylation/HIIT-Methylation-Classification/tree/main/docs"
Repository = "https://github.com/HIIT-Methylation/HIIT-Methylation-Classification"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
